# Magneto_Car_Control

./: CMakeLists.txt  buzzer.c  buzzer.h  car_control.c  car_control.h  cgi.h  dc_motor.c  dc_motor.h  esp8266_client.c  esp8266_client.h  esp8266_server.c  esp8266_server.h  htmldata.c  imu.c  imu.h  led.c  led.h  led_control.c  led_control.h  main.c  mpu6050.c  mpu6050.h  testing.html  ultrasonic.c  ultrasonic.h
html_files/: index.shtml
